mISSING CUSTOM TRACKING, BACKEND ADAPTION & UNIT TESTING AND TESTINGG E2E

--- a/chimero-habit-flow/apps/electron/package.json
+++ b/chimero-habit-flow/apps/electron/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "electron-vite dev",
     "build": "electron-vite build",
-    "preview": "electron-vite preview"
+    "preview": "electron-vite preview",
+    "postinstall": "electron-rebuild -f -w better-sqlite3"
   },
   "keywords": [],
   "author": "",
