Orm Done, Architech Done, Frontend Done - Missing Backend adaption, CI (Testing, linting, building)
1.- Add notificion/reminder backend
2.- Add Assets backend
3.- Add custom tracker backend
4.- Enchant trackers & widgets backend
5.- Linting all the code
6.- Unit and 2e2 testing
7.- Build & Choose (Auto or Manual updating)

--- a/chimero-habit-flow/apps/electron/tsconfig.json
+++ b/chimero-habit-flow/apps/electron/tsconfig.json
@@ -28,6 +28,7 @@
     "paths": {
       "@renderer/*": ["src/renderer/src/*"],
       "@packages/ui/*": ["../../packages/ui/*"],
+      "@packages/db": ["../../packages/db/src/index.ts"],
       "@packages/db/*": ["../../packages/db/src/*"]
     }
   },
