--- a/chimero-habit-flow/apps/electron/package.json
+++ b/chimero-habit-flow/apps/electron/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "db": "workspace:*",
+    "drizzle-orm": "^0.45.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -40,6 +42,7 @@
     "electron-vite": "^5.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^7.3.1"
   }
 }
