--- a/chimero-habit-flow/packages/ui/package.json
+++ b/chimero-habit-flow/packages/ui/package.json
@@ -14,6 +14,9 @@
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0"
   },
+  "devDependencies": {
+    "react": "^19.0.0"
+  },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.4",
