--- a/chimero-habit-flow/turbo.json
+++ b/chimero-habit-flow/turbo.json
@@ -15,6 +15,9 @@
     "test": {
       "outputs": ["coverage/**"],
       "dependsOn": []
+    },
+    "check-types": {
+      "dependsOn": []
     }
   }
 }
