--- a/chimero-habit-flow/apps/electron/package.json
+++ b/chimero-habit-flow/apps/electron/package.json
@@ -13,8 +13,6 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "db": "workspace:*",
-    "drizzle-orm": "^0.45.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -25,11 +23,14 @@
     "better-sqlite3": "^12.6.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "db": "workspace:*",
+    "drizzle-orm": "^0.45.1",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "recharts": "^3.7.0",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.10"
   },
