--- a/chimero-habit-flow/package.json
+++ b/chimero-habit-flow/package.json
@@ -19,10 +19,19 @@
   "license": "ISC",
   "packageManager": "pnpm@10.28.2", 
   "type": "commonjs",
-  "dependencies": {
-    "electron": "^40.0.0"
+  "build": {
+    "directories": {
+      "app": "apps/electron",
+      "output": "dist"
+    },
+    "files": [
+      "out/**/*",
+      "package.json"
+    ],
+    "asar": true
   },
   "devDependencies": {
+    "electron": "^40.0.0",
     "@types/node": "^25.1.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
